# Survival_Kit_2.0

./: .gitignore  .gitignore.txt  CMakeLists.txt  GenerateSolution.bat  Scripting.cmake  project_structure_knowledge.md
AssetCompiler/: CMakeLists.txt  README.md
AssetCompiler/CompilerCore/: MeshCompiler.cpp  MeshCompiler.h  TextureCompiler.cpp  TextureCompiler.h
AssetCompiler/Main/: Main.cpp
AssetCompiler/Utility/: DescriptorParser.h
Engine/: CMakeLists.txt
Engine/AI/: AIManager.cpp  AIManager.h  AISystem.cpp  AISystem.h
Engine/AI/BehaviourTree/: BehaviourNode.cpp  BehaviourNode.h  BehaviourTree.cpp  BehaviourTree.h  BehaviourTreeLoader.cpp  BehaviourTreeLoader.h
Engine/Asset/: AssetDatabase.cpp  AssetDatabase.h  AssetDescriptorGenerator.cpp  AssetDescriptorGenerator.h  AssetManager.cpp  AssetManager.h  AssetPath.h  AssetScanner.cpp  AssetScanner.h  CompiledResourceFormat.h  ResourceData.h  ResourceHelpers.h  ResourceLoaders.cpp  ResourceManager.cpp  ResourceManager.h  ResourceMetadata.h  ResourcePaths.cpp  ResourcePaths.h  ResourceTypes.h
Engine/Audio/: AudioEffectSystem.cpp  AudioEffectSystem.h  AudioManager.cpp  AudioManager.h  AudioSystem.cpp  AudioSystem.h  DSPEffect.h
Engine/Component/: AIComponent.h  AudioComponent.h  CameraComponent.h  ListenerComponent.h  MeshRendererComponent.h  PrefabComponent.h  ReverbZoneComponent.h  RigidbodyComponent.h  TagComponent.h  TransformComponent.h
Engine/Core/: Application.cpp  Application.h  Input.cpp  Input.h  ScriptingBridge.cpp  ScriptingBridge.h
Engine/ECS/: Components.h  Entity.h  Scene.cpp  Scene.h  System.h  SystemRegistry.h
Engine/Editor/: Editor.cpp  Editor.h
Engine/Graphics/: Camera.h  CameraSystem.cpp  CameraSystem.h  DrawItem.h  Framebuffer.h  GLResources.cpp  GLResources.h  GraphicsLoader.h  Light.h  Material.h  MeshData.cpp  MeshData.h  Primitives.cpp  Primitives.h  RenderPass.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
Engine/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
Engine/Prefab/: Prefab.cpp  Prefab.h  PrefabRegistry.cpp  PrefabRegistry.h
Engine/Scripting/: CMakeLists.txt  IScriptEngineInterface.cpp  IScriptEngineInterface.h  ScriptComponent.h  ScriptSystem.cpp  ScriptSystem.h  ScriptingSystem.cpp  ScriptingSystem.h
Engine/Serialization/: BehaviourTreeSerializer.cpp  BehaviourTreeSerializer.h  ComponentRegistry.cpp  ComponentRegistry.h  PrefabInstantiator.cpp  PrefabInstantiator.h  PrefabSerializer.cpp  PrefabSerializer.h  Property.h  ReflectionRegistry.h  SceneSerializer.cpp  SceneSerializer.h  SerializationCommon.h
Engine/Transform/: TransformSystem.cpp  TransformSystem.h
Engine/Utility/: AssetPath.cpp  AssetPath.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  Timestep.h  Types.h
Game/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
ManagedScripts/: CMakeLists.txt  ManagedScripts.csproj  PlayerController.cs  RotatorScript.cs  ScriptManager.cs  SerializeFieldAttribute.cs  TestScript.cs
Resources/Scenes/: ExampleScene.json
Resources/Shaders/: survival_kit_obj.frag  survival_kit_obj.vert
Resources/Sources/Meshes/: E001_worm_host_v001.fbx  E002_worm_child_v001.fbx  E003_trojan_v001.fbx  E004_botnet_v001.fbx  E005_loveletter_v001.fbx  E007_adware_popup_v001.fbx  E007_adware_v001.fbx
Resources/Sources/Scenes/: ExampleScene.json  TestScene.json
Resources/Sources/Shaders/: debug.frag  debug.vert
ScriptAPI/: CMakeLists.txt  Debug.hxx  EngineInterface.cxx  EngineInterface.hxx  Script.cxx  Script.hxx  TransformComponent.cxx  TransformComponent.hxx
ScriptAPI/include/: ScriptBase.hxx  ScriptEntity.hxx  ScriptInput.hxx  ScriptTransform.hxx
ScriptAPI/src/: ScriptBase.cxx  ScriptEntity.cxx  ScriptInput.cxx  ScriptTransform.cxx
ScriptCore/: Application.cpp  Application.h  CMakeLists.txt  MonoBehaviour.cpp  MonoBehaviour.h  ScriptBridge.cpp  ScriptBridge.h  dllmain.cpp  pch.h
ScriptCore/include/: ECSBridge.h  ImportExport.h  ScriptEngine.h
ScriptCore/src/: ECSBridge.cpp  ScriptEngine.cpp
Scripting/ManagedScripts/: ManagedScripts.csproj  TestScript.cs
Scripting/ScriptAPI/: CMakeLists.txt  Debug.hxx  EngineInterface.cxx  EngineInterface.hxx  MathTypes.hxx  RigidbodyComponent.cxx  RigidbodyComponent.hxx  Script.cxx  Script.hxx  TransformComponent.cxx  TransformComponent.hxx
